# parallel-rubiks

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  rubiks  rubiks_cube.h
include/: rubiks_cube.h
src/: main.cpp  rubiks_cube.cpp
tests/: test_rubiks_cube.cpp
